Password 유효성검사 추가

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
       </fieldset>
 
       <div class="mismatch-message hide">비밀번호가 일치하지 않습니다</div>
+      <div class="checkPw-message hide">최소 8자 이상이면서, 알파벳과 숫자 및 특수문자(@$!%*#?&) 는 하나 이상 포함해야 합니다.</div>
 
       <fieldset class="signup">
         <button>회원가입</button>
